# compiler

./: .clang-format  .clangd-format  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  asm  build.sh  log.txt  out.s  spu  std.ykk  test.ykk
preprocessor/: Makefile  amogus.ykk  test.ykk
preprocessor/src/: main.c
preprocessor/subdir/: real
src/: assembler.c  assembler.h  buffer.c  buffer.h  debugger.c  fs.c  fs.h  graph.c  graph.h  ir.c  ir.h  lexer.c  lexer.h  list.c  list.h  main.c  optimizer.c  parser.c  parser.c.bak  parser.h  parser.h.bak  preprocessor.c  preprocessor.h  translator.c  translator.h  x86.c  x86.h
std/: std.inc  std.s  std.ykk
test/: Makefile  pascal.ebnf  ykk.ebnf
test/src/: main.c
tests/: dbg.ykk  function_in_function.ykk  test.ykk  test2.ykk  стандарт.якк  тест1.якк  факториал1.якк
